добавлена новая информация на страницу last fm пользователя, добавлены два теста репозиториев, фикс бага с загрузкой исполнителей на странице выбора, правка анимации плиток